"학교내 가로등 좌표 확인용 마커표시 및 삭제 버튼 구현, 좌표를 확인할 수 있는 .xml 파일 내보내기 기능 포함"

--- a/app/src/main/res/layout/brightly_layout.xml
+++ b/app/src/main/res/layout/brightly_layout.xml
@@ -47,6 +47,13 @@
             android:text="마커 삭제"
             android:layout_gravity="center_horizontal" />
 
+        <Button
+            android:id="@+id/export_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="마커파일 내보내기"
+            android:layout_gravity="center_horizontal" />
+
     </LinearLayout>
 
 </layout>
