--- a/app/src/main/res/layout/brightly_layout.xml
+++ b/app/src/main/res/layout/brightly_layout.xml
@@ -1,5 +1,9 @@
 <!-- brightly_layout.xml -->
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,14 +17,29 @@
             android:text="Brigtly 밝게"
             android:gravity="center"
             android:background="#DDD"
-            android:padding="16dp"/> <!--높이를 조절 -->
+            android:padding="16dp"/>
+
+        <!-- 광고 배너 공간 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:background="#E0E0E0"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <!-- 여기에 광고 배너 콘텐츠를 추가 -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="광고" />
+        </LinearLayout>
+
 
         <!-- Body 영역 -->
         <fragment
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1" />
 
         <!-- Tail 영역 -->
@@ -58,7 +77,6 @@
                 android:visibility="gone" />
         </LinearLayout>
 
-
         <Button
             android:id="@+id/buttonCurrentLocation"
             android:layout_width="wrap_content"
@@ -79,6 +97,26 @@
             android:layout_height="wrap_content"
             android:text="마커파일 내보내기"
             android:layout_gravity="center_horizontal" />
-    </LinearLayout>
 
-</layout>
+        <!-- 긴급 신고 버튼 -->
+        <Button
+            android:id="@+id/buttonEmergencyReport"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="긴급 신고"
+            android:layout_gravity="bottom|start"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="16dp" />
+
+    </LinearLayout>
+    <!-- Persistent Bottom Sheet -->
+    <include
+        android:id="@+id/bottom_sheet"
+        layout="@layout/building_info_bottom_sheet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
